--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,6 @@
 
 @layer components {
   .btn-primary {
-    @apply p-2 rounded-xl bg-green-700 text-white font-extrabold border-2 border-green-700 hover:bg-white hover:text-green-700;
+    @apply p-2 rounded-xl bg-green-700 text-white font-bold border-2 border-green-700 hover:bg-white hover:text-green-700;
   }
 }
