--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,14 +2,15 @@
 
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-}
-
 @layer components {
   .btn-primary {
-    @apply p-2 rounded-xl bg-green-700 text-white font-bold border-2 border-green-700 hover:bg-white hover:text-green-700 hover:cursor-pointer;
+    @apply rounded-xl border-2 border-green-700 bg-green-700 p-2 font-bold text-white hover:cursor-pointer hover:bg-white hover:text-green-700;
   }
+}
+
+@theme {
+  --color-primary-dark: rgb(0, 0, 0);
+  --color-primary-light: rgb(255, 255, 255);
+  --color-secondary-dark: rgb(25, 25, 25);
+  --color-secondary-light: rgb(2430, 230, 230);
 }
